@@ -384,6 +384,11 @@ window, although it has fewer uses in the Slicer.
   or to a diagonal double arrow to indicate that you can move one corner.
   Press the first mouse button and drag to adjust the size, or press the
   second mouse button and drag to shift the band without changing its size.
+<LI> Whenever you are resizing the band, its dimensions in window pixels are
+  shown in the general toolbar, in place of the <B>Lo</B> and <B>Hi</B>
+  buttons.  To see the size temporarily without changing the band, position
+  the cursor over any edge and press the first mouse button without moving the
+  mouse.
 <LI> A non-montaged snapshot will capture the area inside the rubber band.
 <LI> The hot key <B>Shift+R</B> will resize the window to show the area enclosed by
   the rubber band, and turn off the band.  The hot key <B>Ctrl+Shift+R</B>
